# swagger_server/controllers/environment_controller.py
@@ -6,10 +6,10 @@ from swagger_server.models.temperature_summary import TemperatureSummary  # noqa
 from swagger_server import util
 
 
-def set_heater_state(body=None):  # noqa: E501
-    """set_heater_state
+def generate_image(body=None):  # noqa: E501
+    """generate_image
 
-    turns the heater on or off # noqa: E501
+    Generates image from imaginAIry # noqa: E501
 
     :param body: 
     :type body: dict | bytes
@@ -18,11 +18,11 @@ def set_heater_state(body=None):  # noqa: E501
     """
     if connexion.request.is_json:
         body = ImageInfo.from_dict(connexion.request.get_json())  # noqa: E501
-    return 'do some magic!'
+    return 'do some magic! generate_image'
 
 
-def temperature_summary():  # noqa: E501
-    """temperature_summary
+def image_summary():  # noqa: E501
+    """image_summary
 
      # noqa: E501
 
